# edit-standard

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README
.github/workflows/: cmake.yml
build_support/scripts/: run_clang_format.sh
include/: checkpointer.hh  finally.hh  hash.hh  log_appender.hh  log_manager.hh  log_record.hh  log_revoker.hh  log_rewriter.hh  logid.hh  main.hh  memory.hh  otio_tracker.hh  snapshot.hh  string_utils.hh
include/model/: abstract_model.hh  clip.hh  respository.hh  timeline.hh
include/serializer/: binary_deserializer.hh  binary_serializer.hh  deserializer.hh  json_deserializer.hh  json_serializer.hh  serializer.hh  serializer_type_traits.hh
include/writer/: ostream_writer.hh  writer.hh
lib/: CMakeLists.txt  log_record.cc  respository.cc  timeline.cc
lib/serializer/: CMakeLists.txt  binary_deserializer.cc  binary_serializer.cc  json_deserializer.cc  json_serializer.cc  serializer.cc
test/: .clangd  CMakeLists.txt
test/logtest/: log_appender_test.cc  log_generator_test.cc  log_record_test.cc  model_test.cc  serializer_test.cc  writer_factory.hh  writer_test.cc
test/otiotest/: timeline_factory.hh  timeline_test.cc
